# AyuGramDesktop

./: .gitignore  README-RU.md  README.md  changelog.txt
.github/workflows/: build-windows.yml  main.yml
Telegram/: CMakeLists.txt
Telegram/Resources/langs/: lang.strings
Telegram/Resources/winrc/: Telegram.rc  Updater.rc
Telegram/SourceFiles/: apiwrap.cpp  apiwrap.h  mainwidget.cpp  tray.cpp
Telegram/SourceFiles/api/: api_editing.cpp  api_polls.cpp  api_send_progress.cpp  api_sending.cpp  api_unread_things.cpp  api_updates.cpp  api_views.cpp  api_who_reacted.cpp
Telegram/SourceFiles/ayu/: ayu_infra.cpp  ayu_lang.cpp  ayu_settings.cpp  ayu_settings.h  ayu_state.cpp  ayu_url_handlers.cpp  ayu_url_handlers.h  ayu_worker.cpp
Telegram/SourceFiles/boxes/: boxes.style  choose_filter_box.cpp  choose_filter_box.h  delete_messages_box.cpp  language_box.cpp  peer_list_box.cpp  peer_list_box.h  peer_list_controllers.cpp  send_files_box.cpp  share_box.cpp  star_gift_box.cpp  star_gift_box.h  sticker_set_box.cpp  translate_box.cpp  url_auth_box_content.cpp
Telegram/SourceFiles/chat_helpers/: bot_keyboard.cpp  chat_helpers.style  emoji_list_widget.cpp  field_autocomplete.cpp  gifs_list_widget.cpp  message_field.cpp  stickers_list_widget.cpp  stickers_list_widget.h  tabbed_panel.cpp  tabbed_selector.cpp  ttl_media_layer_widget.cpp
Telegram/SourceFiles/core/: application.cpp  core_settings.cpp  core_settings.h  crash_report_window.cpp  local_url_handlers.cpp  phone_click_handler.cpp  (+4 more)
Telegram/cmake/: td_ui.cmake
dev_plugins/echo_plugin/: CMakeLists.txt  echo_plugin.cpp
(+232 files in other folders)
